kubernetes/apps/pocketbase/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: force-https-headers
  namespace: pocketbase
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
