kubernetes/apps/pocketbase/pocketbase.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pocketbase
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketbase
  namespace: pocketbase
spec:
  selector:
    matchLabels:
      app: pocketbase
  replicas: 1 
  template:
    metadata:
      labels:
        app: pocketbase
    spec:
      containers:
        - name: pocketbase
          image: ghcr.io/muchobien/pocketbase:0.22
          args: ["serve", "--http=0.0.0.0:8090", "--dir=/pb_data"]
          ports:
            - containerPort: 8090
 
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - name: data
              mountPath: /pb_data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pocketbase-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pocketbase
  namespace: pocketbase
spec:
  ports:
    - port: 80
      targetPort: 8090
  selector:
    app: pocketbase
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocketbase-ingress
  namespace: pocketbase
  annotations:
   
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
 
  rules:
    - host: api.clem-ops.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocketbase
                port:
                  number: 80
